--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,17 +2,17 @@
 spring.profiles.active=prod
 
 # WAS Port
-server.port = 10000
+server.port = 11000
 
 # DB Information
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://192.168.111.130:3306/myDB
+spring.datasource.url=jdbc:mariadb:/mariadb.cvsqqi8x8nw9.ap-northeast-2.rds.amazonaws.com:3306/myDB
 
 # DB's ID
-spring.datasource.username=web_user
+spring.datasource.username=poly
 
 # DB's Password
-spring.datasource.password=1234
+spring.datasource.password=Poly01!
 
 # DTO Location
 mybatis.type-aliases-package=kopo.poly.dto
@@ -25,13 +25,13 @@ spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
 # MongoDB Connection
-spring.data.mongodb.host=192.168.111.129
+spring.data.mongodb.host=54.177.4.11
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=MyDB
 spring.data.mongodb.username=myUser
 spring.data.mongodb.password=1234
 
 # RedisDB Connection
-spring.redis.host=192.168.2.131
+spring.redis.host=15.164.116.157
 spring.redis.port=6379
 spring.redis.password=1234
