--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.profiles.active=prod
 server.port = 11000
 
 # DB Information
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb:/mariadb.cvsqqi8x8nw9.ap-northeast-2.rds.amazonaws.com:3306/myDB
+spring.datasource.driver-class-name=
+spring.datasource.url=
 
 # DB's ID
 spring.datasource.username=poly
@@ -25,13 +25,13 @@ spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
 # MongoDB Connection
-spring.data.mongodb.host=54.177.4.11
+spring.data.mongodb.host=
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=MyDB
 spring.data.mongodb.username=myUser
 spring.data.mongodb.password=1234
 
 # RedisDB Connection
-spring.redis.host=15.164.116.157
+spring.redis.host=
 spring.redis.port=6379
 spring.redis.password=1234
